=============
Release 1.0.6
=============

* optimizations of the fitting procedure
* optimizations in the basis for PCA (smoothing waveforms)

=============
Release 1.0.5
=============

* automatic versioning with versionneer
* conda/pip packages built with git actions (thanks to Marcel)

=============
Release 1.0.4
=============

* possibility for the amplitudes [a_min, a_max] to depend on time
* median is now removed per shanks
* common ground syntax slightly changed, to allow one ground per shank
* fix a bug when collect_all and dense templates
* fix if no templates are found
* improvements of the smart search
* add the option to collect normalized MSE during fitting. False by default
* fix the rhd wrapper
* divide and conquer assigment now based on barycenters instead of simple extremas
* exit the clustering if too many centroids are found (sign of bad channels)
* fixes in the meta merging GUI (RPV and dip)
* optimizations for the second component, less double counting
* fix to use at least 1 CPU
* the code can be launched on a .params file with [data] file_name filled
* add the mapping-file mode for neuralynx [mapping_file] (should be generalized?)
* better estimation of amplitudes for axonal spikes
* enhance the estimation of amplitudes by proper alignement

=============
Release 1.0.0
=============

* prevent the use of negative indices for channels
* fix if no templates are found
* fix if the dead file is empty
* fix for recent versions of MPI (if dead times used)
* fix if dead times are not sorted or overlapping
* add the auto_cluster param in [data] to force gobal_tmp if needed
* fix when no cluster are found on some electrodes
* fix in the MATLAB Gui if no spikes are found
* support for the maxwell file format (MaxOne and MaxTwo)
* optimizations for faster fitting
* templates are densified dring fitting if not enough sparse (faster)

=============
Release 0.9.9
=============

* fix for shanks (because of optimization in 0.9.8)