@@ -4,6 +4,7 @@ Release 1.0.6
 
 * optimizations of the fitting procedure
 * optimizations in the basis for PCA (smoothing waveforms)
+* optimizations to remove more mixtures
 
 =============
 Release 1.0.5
